--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "angular": "~1.6.0",
     "angular-animate": "~1.6.0",
     "angular-aria": "~1.6.0",
+    "angular-auto-complete": "^1.7.4",
     "angular-cookies": "~1.6.0",
     "angular-resource": "~1.6.0",
     "angular-sanitize": "~1.6.0",
@@ -141,7 +142,8 @@
     "test": "gulp test",
     "flow": "flow",
     "update-webdriver": "node node_modules/protractor/bin/webdriver-manager update",
-    "start": "node server"
+    "start": "node server",
+    "lint": "gulp lint:scripts"
   },
   "private": true
 }
